--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 </li>
             </ul>
         </div>
+        <div class="gif">
+            <div class="leaf">
+                <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
+            </div>
+        </div>
     </div>
 
 
@@ -177,14 +182,7 @@
         </div>
     </div>
 
-    <!-- gif -->
-    <div class="leaf">
-        <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
-    </div>
 
-    <div class="leaf2">
-        <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
-    </div>
 
     <!-- jqurey -->
     <script src="js/jquery.min.js"></script>
