--- a/project.html
+++ b/project.html
@@ -285,7 +285,7 @@
         <img src="image/leaf.png" alt="">
     </div>
 
-    <div class="leaf two">
+    <div class="leaf two d-s-none">
         <img src="image/leaf.png" alt="">
     </div>
 
