--- a/illustration.html
+++ b/illustration.html
@@ -50,8 +50,8 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide"><img src="image/IL/ilBanner.jpg" alt="YURU">
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
         </div>
         </div>
     </div>
@@ -103,7 +103,7 @@
                 </div>
     
                 <div class="info">
-                    <h1 class="d-ss-none fs-sss">Illustration</h1>
+                    <h1 class=" fs-sss">Illustration</h1>
                     <p class="d-ss-none">
                         <span>插畫 | 贈品延伸 設計</span><br><br>
                         <p>使用手繪及電繪方式交錯呈現出一幅又一幅的奇幻世界，並延伸至印刷物上。<br>
@@ -122,7 +122,7 @@
     </div>
 
         <!-- gif -->
-        <div class="leaf ">
+        <div class="leaf d-s-none">
             <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
         </div>
     <!-- 頁尾 -->
