--- a/photo.html
+++ b/photo.html
@@ -51,8 +51,8 @@
               <div class="swiper-slide"><img src="image/photo/photobn.jpg" alt="YURU"></div>
 
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
         </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
     </div>
 
         <!-- gif -->
-        <div class="leaf">
+        <div class="leaf d-s-none">
             <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
         </div>
     <!-- 頁尾 -->
