--- a/web.html
+++ b/web.html
@@ -116,8 +116,8 @@
                 </div>
     
                 <div class="info">
-                    <h1 class="d-ss-none fs-sss">Event Website</h1>
-                    <p class="d-ss-none">
+                    <h1 class="fs-sss">Event Website</h1>
+                    <p class="">
                     <span>寢具|旅遊|電信  活動頁設計</span><br><br>
                     <p>配合產品企劃與行銷主題發想，從圖像視覺到部分文案發想，從顧客體驗思考，創作出適當的視覺設計。<br>
                     </p>
@@ -128,8 +128,8 @@
 
             <div class=" main bottom">
                 <div class="info">
-                    <h1 class="d-ss-none fs-sss">Banner</h1>
-                    <p class="d-ss-none">
+                    <h1 class=" fs-sss">Banner</h1>
+                    <p class="">
                     <span>寢具|旅遊|電信  banner設計</span><br><br>
                     <p>隨著產業的不同，從消費族群及商品屬性思考並規劃式覺得呈現及方向，設計出屬於產品本身的宣傳圖像。</p>
                         
@@ -225,7 +225,7 @@
     </div>
 
         <!-- gif -->
-        <div class="leaf ">
+        <div class="leaf  d-s-none">
             <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
         </div>
     <!-- 頁尾 -->
