--- a/project.html
+++ b/project.html
@@ -143,7 +143,7 @@
                 </div>
     
                 <div class="info">
-                    <h1 class="d-ss-none">Graphic Design</h1>
+                    <h1 class="">Graphic Design</h1>
                     <p class="d-ss-none">
                     <span>寢具|旅遊|餐飲|藝文  印刷品設計</span><br><br>
                         配合當次活動主題，從版面規劃到整體視覺風格制定，從初始的安排，到後續一筆一劃的細心製作，認真完成每一次的專案。
@@ -153,7 +153,7 @@
 
             <div class=" main middle">
                 <div class="info">
-                    <h1 class="d-ss-none">Catalogue</h1>
+                    <h1 class="">Catalogue</h1>
                     <p class="d-ss-none">
                         <span>旅遊|寢具品牌  書冊&夾報設計</span><br><br>
                         透過不同主題的故事發想，從畫面的構思到部分文案的發想，透過與行銷及產品企劃的討論，將創意串連成完整的視覺故事呈現給觀賞者。
@@ -248,7 +248,7 @@
               </div>
   
               <div class="info ">
-                  <h1 class="d-ss-none fs-sss">Social Media Design</h1>
+                  <h1 class=" fs-sss">Social Media Design</h1>
                   <p class="d-ss-none">
                   <span>寢具|旅遊|餐飲  社群圖文設計</span><br><br>
                   <p>搭配行銷活動，創作出多元的圖像視覺，結合時事與文案，來達到吸引消費者的目的。</p>
@@ -281,7 +281,7 @@
     </div>
 
     <!-- gif -->
-    <div class="leaf ">
+    <div class="leaf  d-s-none">
         <img src="image/leaf.png" alt="">
     </div>
 
