--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="gif">
-            <div class="leaf">
+            <div class="leaf  d-s-none">
                 <img src="image/index/kisspng-coffee-bean-coffee-belt-coffea-shadow-5af4450dbd4a10.8118081415259579017753.png" alt="">
             </div>
         </div>
