--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <!-- 我 -->
-    <div class="about">
+    <div class="about d-s-none">
         <div class="container">
             <div class="pic">
                 <img src="image/index/me3.jpg" alt="">
