--- a/illustration.html
+++ b/illustration.html
@@ -104,7 +104,7 @@
     
                 <div class="info">
                     <h1 class=" fs-sss">Illustration</h1>
-                    <p class="d-ss-none">
+                    <p class="">
                         <span>插畫 | 贈品延伸 設計</span><br><br>
                         <p>使用手繪及電繪方式交錯呈現出一幅又一幅的奇幻世界，並延伸至印刷物上。<br>
                         </p>
