--- a/photo.html
+++ b/photo.html
@@ -104,8 +104,8 @@
                 </div>
     
                 <div class="info">
-                    <h1 class="d-ss-none fs-sss">Photography</h1>
-                    <p class="d-ss-none">
+                    <h1 class=" fs-sss">Photography</h1>
+                    <p class="">
                         <span>人文 | 風景 | 商品 攝影</span><br><br>
                         <p>用鏡頭記錄每一個瞬間<br>
                             在光與影的時光交錯中 在動與靜之中<br>
