--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="category">
         <div class="container">
             <div class="title">
-                <h1>CATEGORY</h1>
+                <h1 class="d-s-none">CATEGORY</h1>
                 <p class="d-s-none">唯有細心孕育的種子 才能化為強韌的未來</p>            
             </div>
             <div class="project">
