--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="illustration.html">ILLUSTRATION</a></li>
             </ul>
         <div class="bgpicLeaf">
-            <img src="../image/index/leaf.svg" alt="">
+            <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf.svg" alt="">
         </div>
     </header>
 
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="bgpic" data-0="opacity: 0" data-2000="opacity: 1">
-            <img src="../image/index/30.svg" alt="">
+            <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/30.svg" alt="">
         </div>
     </section>
 
@@ -96,7 +96,7 @@
     <section class="secTwo">
         <div class="circle"></div>
         <div class="bgpicLeaf">
-            <img src="../image/index/leaf2.svg" alt="">
+            <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf2.svg" alt="">
         </div>
 
         <div class="container" data-bottom-top="transform: translateY(-50px);opacity: 0" data-center="transform: translateY(0px);opacity: 1">
@@ -149,7 +149,7 @@
             </div>
 
             <div class="bgpicLeaf">
-                <img src="../image/index/leaf3.svg" alt="">
+                <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf3.svg" alt="">
             </div>
         </div>
     </section>
