--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
                 <li><a href="illustration.html">ILLUSTRATION</a></li>
             </ul>
         <div class="bgpicLeaf">
-            <img src="../image/index/leaf.svg" alt="">
+            <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf.svg" alt="">
         </div>
     </header>
 
@@ -274,7 +274,7 @@
       </div>
 
       <div class="bgpicLeafP">
-        <img src="../image/index/leaf3.svg" alt="">
+        <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf3.svg" alt="">
     </div>
     </section>
 
