--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="mainText">
                     <h2>Hi! I'm Yuru</h2>
                     <p class="text">我是育如，是一名視覺設計師，至今約有九年多的設計經驗，曾擔任震旦通訊及百貨寢具與餐飲品牌的視覺設計外，也曾於旅遊品牌及整合行銷公司擔任美術設計，經手過不同產業的設計專案，跨越平面印刷與數位媒體設計，擅長從商品的本身特性結合品牌形象，搭配自身的設計與插畫技能，呈現引人注目的視覺圖像。</p><br>
-                    <i class="far fa-envelope itext pdb">  mogou24@gmail.com</i>
+                    <i class="far fa-envelope itext pdb">  mogou24@gmail.com</i><br>
                     <i class="fas fa-mobile-alt itext">  0953-813-203</i>
                     </div>
             </div>
