--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="main">
                 <div class="bs firstpic picme" data-0="transform: translatex(-100px)" data-500="transform: translatex(0px)">
                     <div class="picS" >
-                        <img src="../image/index/index02.png" alt="">
+                        <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/index02.png" alt="">
                     </div>
                 </div>
                 <div class="mainText">
@@ -84,7 +84,7 @@
                     <div class="bs picBox box5"></div>
                     <div class="bs picBox box6"></div>
                     <div class="picS picS2" >
-                        <img src="../image/index/index02.png" alt="">
+                        <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/index02.png" alt="">
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
     <section class="third">
         <div class="container">
             <div class="picS" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
-                <img src="../image/index/index02.png" alt="">
+                <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/index02.png" alt="">
             </div>
             <a href="project.html" class="thirdpic tp1 bs" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <h2>GRAPHIC DESIGN</h2>
