--- a/photo.html
+++ b/photo.html
@@ -105,7 +105,7 @@
                 <div class="swiper-button-prev c-w"></div>
             </div>
             </div>
-            <div class="projecText" data-bottom-top="transform: translatex(50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
+            <div class="projecText">
               <div class="info">
                 <h1 class=" fs-sss">Photography</h1>
                 <p class="">
@@ -141,7 +141,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="js/all.js"></script>
 </body>
 </html>
