--- a/project.html
+++ b/project.html
@@ -143,7 +143,7 @@
                     <div class="swiper-button-prev c-w"></div>
                 </div>
             </div>
-            <div class="projecText">
+            <div class="projecText" data-bottom-top="transform: translatex(50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <div class="info">
                     <h1 class="">Graphic Design</h1>
                     <p class="">
@@ -185,7 +185,7 @@
                 </div>
             </div>
 
-            <div class="projecText">
+            <div class="projecText" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
               <div class="info">
                   <h1 class="">Catalogue</h1>
                   <p class="">
@@ -261,7 +261,7 @@
               <div class="swiper-button-prev c-w"></div>
           </div>
           </div>
-          <div class="projecText" >
+          <div class="projecText" data-bottom-top="transform: translatex(50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
             <div class="info ">
               <h1 class=" fs-sss">Social Media Design</h1>
               <p class="">
@@ -297,6 +297,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="js/all.js"></script>
 </body>
 </html>
