--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="first">
         <div class="container">
             <div class="main">
-                <div class="bs firstpic picme">
+                <div class="bs firstpic picme" data-0="transform: translatex(-100px)" data-500="transform: translatex(0px)">
                     <div class="picS" >
                         <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/index02.png" alt="">
                     </div>
@@ -62,7 +62,7 @@
                     </div>
             </div>
 
-            <div class="lineText" >
+            <div class="lineText" data-0="opacity: 0" data-800="opacity: 1">
                 <p>
                     唯有細心孕育的種子 才能化為強韌的未來</p>
             </div>
@@ -76,7 +76,7 @@
                         <i class="fas fa-tv"> 網頁視覺設計與基礎切版</i><br>
                         <i class="fas fa-photo-video"> 簡易商品攝影</i>
                 </div>
-                <div class="firstpic d-flexw">
+                <div class="firstpic d-flexw" data-bottom-top="transform: translatex(200px)" data-center="transform: translatex(0px)">
                     <div class="bs picBox box1"></div>
                     <div class="bs picBox box2"></div>
                     <div class="bs picBox box3"></div>
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="bgpic" >
+        <div class="bgpic" data-0="opacity: 0" data-2000="opacity: 1">
             <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/30.svg" alt="">
         </div>
     </section>
@@ -101,7 +101,7 @@
             <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/leaf2.svg" alt="">
         </div>
 
-        <div class="container" >
+        <div class="container" data-bottom-top="transform: translateY(-50px);opacity: 0" data-center="transform: translateY(0px);opacity: 1">
             <div class="secPic" ></div>
             <div class="mainText" >
                 <div class="school">
@@ -128,24 +128,24 @@
     <!-- third -->
     <section class="third">
         <div class="container">
-            <div class="picS" >
+            <div class="picS" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/index02.png" alt="">
             </div>
-            <a href="project.html" class="thirdpic tp1 bs">
+            <a href="project.html" class="thirdpic tp1 bs" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <h2>GRAPHIC DESIGN</h2>
             </a>
-            <a href="web.html" class="thirdpic tp2 bs" >
+            <a href="web.html" class="thirdpic tp2 bs" data-bottom-top="transform: translatex(50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <h2>WEB DESIGN</h2>
             </a>
-            <a href="photo.html" class="thirdpic tp3 bs" >
+            <a href="photo.html" class="thirdpic tp3 bs" data-bottom-top="transform: translatex(-50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
                 <h2>PHOTOGRAPHY</h2>
             </a>
-            <a href="illustration.html" class="thirdpic tp4 bs" >
+            <a href="illustration.html" class="thirdpic tp4 bs" data-bottom-top="transform: translatex(50px);opacity: 0" data-100-top="transform: translatex(0px);opacity: 1">
                 <h2>ILLUSTRATION</h2>
             </a>
 
 
-            <div class="lineText">
+            <div class="lineText" data-bottom-top="opacity: 0" data-center="opacity: 1">
                 <p>
                     商業與設計的思維 交織出不一樣的風景 </p>
             </div>
@@ -173,6 +173,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="js/all.js"></script>
 </body>
 </html>
