--- a/illustration.html
+++ b/illustration.html
@@ -109,7 +109,9 @@
                 <h1 class=" fs-sss">Illustration</h1>
                 <p class="">
                     <span>插畫 | 贈品延伸 設計</span><br><br>
-                    <p>使用手繪及電繪方式交錯呈現出一幅又一幅的奇幻世界，並延伸至印刷物上。<br>
+                    <p> ▌ 視覺設計<br>
+                      ▌ 印刷發包<br>
+                      ▌ 插圖繪製<br>
                     </p>
                 </p>
             </div>
