--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
                     <h2>SKILL</h2>
                     <p >
                         <i class="fas fa-pencil-ruler"> 視覺設計及印刷相關基本知識</i><br>
-                        <i class="fas fa-pencil-alt"> 插畫設計與動態視覺延伸製作</i><br>
+                        <i class="fas fa-paint-brush"> 插畫設計與動態視覺延伸製作</i><br>
                         <i class="fas fa-tv"> 網頁視覺設計與基礎切版</i><br>
-                        <i class="fas fa-photo-video"> 簡易商品攝影</i>
+                        <i class="fas fa-photo-video"> 商品攝影</i><br>
+                        <i class="fas fa-pencil-alt"> 商品文案發想</i>
                 </div>
                 <div class="firstpic d-flexw" data-bottom-top="transform: translatex(200px)" data-center="transform: translatex(0px)">
                     <div class="bs picBox box1"></div>
