--- a/project.html
+++ b/project.html
@@ -147,8 +147,11 @@
                 <div class="info">
                     <h1 class="">Graphic Design</h1>
                     <p class="">
-                    <span>寢具|旅遊|餐飲|藝文  印刷品設計</span><br><br>
-                        配合當次活動主題，從版面規劃到整體視覺風格制定，從初始的安排，到後續一筆一劃的細心製作，認真完成每一次的專案。
+                    <span>寢具|旅遊|餐飲|藝文  平面廣宣</span><br><br>
+                        ▌ 視覺設計<br>
+                        ▌ 印刷發包<br>
+                        ▌ 插圖繪製<br>
+                        ▌ 文案發想<br>
                     </p>
                 </div>
             </div>
@@ -189,8 +192,11 @@
               <div class="info">
                   <h1 class="">Catalogue</h1>
                   <p class="">
-                      <span>旅遊|寢具品牌  書冊&夾報設計</span><br><br>
-                      透過不同主題的故事發想，從畫面的構思到部分文案的發想，透過與行銷及產品企劃的討論，將創意串連成完整的視覺故事呈現給觀賞者。
+                      <span>旅遊|寢具品牌  型錄與夾報設計</span><br><br>
+                      ▌ 視覺設計<br> 
+                      ▌ 風格設計<br>
+                      ▌ 商品修圖<br>
+                      ▌ 印刷發包<br>
                   </p>
               </div>
           </div>
@@ -266,7 +272,10 @@
               <h1 class=" fs-sss">Social Media Design</h1>
               <p class="">
               <span>寢具|旅遊|餐飲  社群圖文設計</span><br><br>
-              <p>搭配行銷活動，創作出多元的圖像視覺，結合時事與文案，來達到吸引消費者的目的。</p>
+              <p> ▌ 視覺設計<br>
+                  ▌ 版面規劃<br>
+                  ▌ 插圖繪製<br> 
+                  ▌ 文案發想<br>
                   
               </p>
           </div>
