--- a/web.html
+++ b/web.html
@@ -122,7 +122,9 @@
                 <h1 class="fs-sss">Event Website</h1>
                 <p class="">
                 <span>寢具|旅遊|電信  活動頁設計</span><br><br>
-                <p>配合產品企劃與行銷主題發想，從圖像視覺到部分文案發想，從顧客體驗思考，創作出適當的視覺設計。<br>
+                <p> ▌ 視覺設計<br>
+                    ▌ 文案發想<br>
+                    ▌ 活動頁架設(WIX)<br>
                 </p>
                     
                 </p>
@@ -220,7 +222,8 @@
                 <h1 class=" fs-sss">Banner</h1>
                 <p class="">
                 <span>寢具|旅遊|電信  banner設計</span><br><br>
-                <p>隨著產業的不同，從消費族群及商品屬性思考並規劃式覺得呈現及方向，設計出屬於產品本身的宣傳圖像。</p>
+                <p> ▌ 視覺設計<br>
+                  ▌ 插圖繪製<br>
                     
                 </p>
             </div>
