--- a/project.html
+++ b/project.html
@@ -50,8 +50,9 @@
         <div class="projectBn">
             <div class="rectangle swiper-container mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="image/pr/gdBanner.jpg" alt="YURU"></div>
-                  <div class="swiper-slide"><img src="image/pr/gdBanner2.jpg" alt="YURU"></div>
+                  <div class="swiper-slide"><a href="#first"><img src="image/pr/gdBanner2.jpg" alt="YURU"></a></div>
+                  <div class="swiper-slide"><a href="#sec"><img src="image/pr/gdBanner.jpg" alt="YURU"></a></div>
+                  
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
@@ -60,7 +61,7 @@
     </section>
 
     <!-- sec -->
-    <section class="secTwo projectmain">
+    <section class="secTwo projectmain" id="first">
         <div class="container containerM">
             <div class="projectPic">
                 <div class="swiper-container square mySwiper2">
@@ -159,7 +160,7 @@
     </section>
 
     <!-- third -->
-    <section class="secTwo projectmain">
+    <section class="secTwo projectmain" id="sec">
         <div class="container containerM colomn-r">
             <div class="projectPic">
                 <div class="swiper-container square mySwiper2">
