--- a/project.html
+++ b/project.html
@@ -50,8 +50,8 @@
         <div class="projectBn">
             <div class="rectangle swiper-container mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><a href="#first"><img src="image/pr/gdBanner2.jpg" alt="YURU"></a></div>
-                  <div class="swiper-slide"><a href="#sec"><img src="image/pr/gdBanner.jpg" alt="YURU"></a></div>
+                  <div class="swiper-slide"><img src="image/pr/gdBanner2.jpg" alt="YURU"></div>
+                  <div class="swiper-slide"><img src="image/pr/gdBanner.jpg" alt="YURU"></div>
                   
                 </div>
                 <div class="swiper-button-next"></div>
