--- a/web.html
+++ b/web.html
@@ -50,8 +50,8 @@
         <div class="projectBn">
           <div class="rectangle swiper-container mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><a href="#first"><img src="image/web/webn.jpg" alt="YURU"></a></div>
-              <div class="swiper-slide"><a href="#first"><img src="image/web/webn2.jpg" alt="YURU"></a></div>
+              <div class="swiper-slide"><img src="image/web/webn.jpg" alt="YURU"></div>
+              <div class="swiper-slide"><img src="image/web/webn2.jpg" alt="YURU"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -60,7 +60,7 @@
     </section>
 
     <!-- sec -->
-    <section class="secTwo projectmain" id="first">
+    <section class="secTwo projectmain" >
         <div class="container containerM">
             <div class="projectPic">
                 <div class="swiper-container square mySwiper2">
