--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="mainText">
                     <h2>Hi! I'm Yuru</h2>
-                    <p class="text">我是育如，是一名視覺設計師，至今約有九年多的設計經驗，曾擔任震旦通訊及百貨寢具與餐飲品牌的視覺設計外，也曾於旅遊品牌及整合行銷公司擔任美術設計，經手過不同產業的設計專案，跨越平面印刷與數位媒體設計，擅長從商品的本身特性結合品牌形象，搭配自身的設計與插畫技能，呈現引人注目的視覺圖像。</p><br>
+                    <p class="text">我是育如，是一名視覺設計師，至今約有十年多的設計經驗，曾擔任跨產業的品牌設計，經手過餐飲、旅遊、居家用品等...不同產品的設計專案，擅長數位社群設計與平面印刷，並從商品的本身特性結合品牌形象，從視覺設計結合插畫技巧，呈現引人注目的視覺圖像。</p><br>
                     <i class="far fa-envelope itext pdb">  mogou24@gmail.com</i><br>
                     <i class="fas fa-mobile-alt itext">  0953-813-203</i>
                     </div>
@@ -76,6 +76,7 @@
                         <i class="fas fa-tv"> 網頁視覺設計與基礎切版</i><br>
                         <i class="fas fa-photo-video"> 商品攝影</i><br>
                         <i class="fas fa-pencil-alt"> 商品文案發想</i>
+                    </p>
                 </div>
                 <div class="firstpic d-flexw" data-bottom-top="transform: translatex(200px)" data-center="transform: translatex(0px)">
                     <div class="bs picBox box1"></div>
@@ -90,7 +91,7 @@
                 </div>
             </div>
         </div>
-        <div class="bgpic" data-0="opacity: 0" data-2000="opacity: 1">
+        <div class="bgpic" data-0="opacity: 0" data-2000="opacity: 0.5">
             <img src="https://raw.githubusercontent.com/mogou24/design/main/image/index/30.svg" alt="">
         </div>
     </section>
@@ -108,18 +109,19 @@
                 <div class="school">
                     <h3>EDUCATION</h3>
                     <p >
-                        <i class="fas fa-school">復興商工 | 美工科</i><br>
-                        <i class="fas fa-school">景文科技大學 | 視覺傳達設計系</i>
+                        <i class="fas fa-school" style="font-weight: 400;">復興商工 | 美工科</i><br>
+                        <i class="fas fa-school" style="font-weight: 400;">景文科技大學 | 視覺傳達設計系</i>
                     </p>
                 </div>
                 <div class="work">
                     <h3>EXPERIENCES</h3>
                     <p >
-                        <i class="fas fa-building">翰匠整合行銷 | 設計</i><br>
-                        <i class="fas fa-building">紅豆食府餐飲集團 | 設計企劃</i><br>
-                        <i class="fas fa-building">樂比舒眠 | 品牌設計</i><br>
-                        <i class="fas fa-building">盈達旅遊 | 視覺設計</i><br>
-                        <i class="fas fa-building">夏普震旦 | 視覺設計</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">翰匠整合行銷 | 設計</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">紅豆食府餐飲集團 | 設計企劃</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">樂比舒眠 | 品牌設計</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">盈達旅遊 | 視覺設計</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">夏普震旦 | 視覺設計</i><br>
+                        <i class="fas fa-building" style="font-weight: 400;">IOHS十分幸福 | 視覺設計</i><br>
                     </p>
                 </div>
         </div>
