--- a/web.html
+++ b/web.html
@@ -234,6 +234,50 @@
       </div>
     </section>
 
+    <!-- three -->
+    <section class="secTwo projectmain" >
+        <div class="container containerM">
+            <div class="projectPic">
+                <div class="swiper-container square mySwiper2">
+                <div class="swiper-wrapper">
+                    <!-- start -->
+                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec01.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec01.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec03.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec03.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec02.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec02.jpg" alt=""/></a></li>
+                    </ul>
+                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec04.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec04.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec05.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec05.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec06.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec06.jpg" alt=""/></a></li>
+                    </ul>                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec07.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec07.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec08.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec08.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec09.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec09.jpg" alt=""/></a></li>
+                    </ul>
+
+
+                </div>
+                <div class="swiper-button-next c-w"></div>
+                <div class="swiper-button-prev c-w"></div>
+                </div>
+            </div>
+            <div class="projecText" data-bottom-top="transform: translatex(50px);opacity: 0" data-center="transform: translatex(0px);opacity: 1">
+              <div class="info">
+                <h1 class="fs-sss">E-commerce Visual Design</h1>
+                <p class="">
+                <span>電子商務 視覺設計</span><br><br>
+                <p> ▌ 商品主圖'<br>
+                    ▌ 影片封面<br>
+                    ▌ 銷售頁<br>
+                </p>
+                    
+                </p>
+            </div>
+            </div>
+        </div>      
+    </section>
+
     <!-- footer -->
     <footer>
         <div class="container">
