--- a/web.html
+++ b/web.html
@@ -124,7 +124,7 @@
                 <span>寢具|旅遊|電信  活動頁設計</span><br><br>
                 <p> ▌ 視覺設計<br>
                     ▌ 文案發想<br>
-                    ▌ 活動頁架設(WIX)<br>
+                    ▌ 活動頁面<br>
                 </p>
                     
                 </p>
@@ -250,11 +250,30 @@
                       <li><a class="example-image-link pic" href="image/web/ec/ec04.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec04.jpg" alt=""/></a></li>
                       <li><a class="example-image-link pic" href="image/web/ec/ec05.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec05.jpg" alt=""/></a></li>
                       <li><a class="example-image-link pic" href="image/web/ec/ec06.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec06.jpg" alt=""/></a></li>
-                    </ul>                    <ul class="swiper-slide">
+                    </ul>                    
+                    <ul class="swiper-slide">
                       <li><a class="example-image-link pic" href="image/web/ec/ec07.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec07.jpg" alt=""/></a></li>
                       <li><a class="example-image-link pic" href="image/web/ec/ec08.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec08.jpg" alt=""/></a></li>
                       <li><a class="example-image-link pic" href="image/web/ec/ec09.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec09.jpg" alt=""/></a></li>
                     </ul>
+
+                    <!-- 第二面 -->
+                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec10.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec10.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec11.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec11.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec12.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec12.jpg" alt=""/></a></li>
+                    </ul>
+                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec13.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec13.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec14.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec14.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec15.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec15.jpg" alt=""/></a></li>
+                    </ul>
+                    <ul class="swiper-slide">
+                      <li><a class="example-image-link pic" href="image/web/ec/ec16.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec16.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec17.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec17.jpg" alt=""/></a></li>
+                      <li><a class="example-image-link pic" href="image/web/ec/ec18.jpg" data-lightbox="example-set"><img class="example-image" src="image/web/ec/ec18.jpg" alt=""/></a></li>
+                    </ul>                    
+
 
 
                 </div>
@@ -267,9 +286,9 @@
                 <h1 class="fs-sss">E-commerce Visual Design</h1>
                 <p class="">
                 <span>電子商務 視覺設計</span><br><br>
-                <p> ▌ 商品主圖'<br>
+                <p> ▌ 商品主圖<br>
                     ▌ 影片封面<br>
-                    ▌ 銷售頁<br>
+                    ▌ 銷售頁面<br>
                 </p>
                     
                 </p>
